<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_reader_import"
        android:icon="@drawable/ic_file_import"
        android:title="@string/import_"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_reader_switch"
        android:icon="@drawable/ic_switch"
        android:title="@string/switch_mode"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_reader_count"
        android:icon="@drawable/ic_count"
        android:title="@string/count_items"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_reader_clear"
        android:icon="@drawable/ic_clear"
        android:title="@string/clear_items"
        app:showAsAction="withText" />
</menu>